--- a/master.css
+++ b/master.css
@@ -459,16 +459,24 @@ transform :translateY(-50%);
   }
   .design .text ul li {
    padding : 15px 0;
+   
   }
+
+  .design .text ul li i {
+    width : 40px;
+    font-size : 25px;
+  }
+
+  
   /* How to use fontawesome icons in psuedo elements  */
-  .design .text ul li::before {
+  /* .design .text ul li::before {
     font-family: "Font Awesome 5 Free";
     content: "\f108";
     font-weight: 900;
     margin-right: 20px;
     position: relative;
     top: 1px;
-  }
+  } */
   
   /* End Design */
 
